created addToGroup and changed other func
