# doc/api.yaml
@@ -60,6 +60,7 @@ paths:
         content:
           application/json:
             schema:
+              description: id of the user who made the login
               type: object
               properties:
                 username: {$ref: "#/components/schemas/Username"}
@@ -72,8 +73,7 @@ paths:
         "400": {$ref: "#/components/responses/BadRequest"}
         "500": {$ref: "#/components/responses/InternalServerError"}
         
-
-  /chats:
+  /chats/newchat:
     post:
       security:
         - bearerAuth: []
@@ -104,6 +104,10 @@ paths:
                   messageId: {$ref: "#/components/schemas/MessageId"}
         "400": {$ref: "#/components/responses/BadRequest"}
         "500": {$ref: "#/components/responses/InternalServerError"}
+
+
+
+  /chats:
     get:
       security:
         - bearerAuth: []
