# service/api/api-handler.go
@@ -10,7 +10,8 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/session",rt.wrap(rt.doLogin))
 
 	// Chats route
-	rt.router.POST("/chats",rt.wrap(rt.createChat))
+	rt.router.POST("/chats/newchat",rt.wrap(rt.createChat))
+	rt.router.PUT("/chats/:chat_id/users",rt.wrap(rt.addToGroup))
 
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
